fix(hero) : fix image banner, add cards img, add background, align elements

--- a/assets/base.css
+++ b/assets/base.css
@@ -1115,16 +1115,6 @@ summary::-webkit-details-marker {
   background-color: transparent;
 }
 
-.media > *:not(.zoom):not(.deferred-media__poster-button),
-.media model-viewer {
-  display: block;
-  max-width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
 
 .media > img {
   object-fit: cover;
@@ -3641,7 +3631,7 @@ header .header__heading-link{
   font-size: 1.8rem;
 }
 
-.header__buttons{
+.container__buttons{
   display: flex;
   justify-content: end;
   gap: 16px;
@@ -3674,6 +3664,61 @@ header .header__heading-link{
     stroke: #fff;
   }
 }
-
 /* Header End */
+
+/* General buttons */
+
+.btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 24px;
+  letter-spacing: 0;
+  color: rgba(255, 255, 255, 1);
+  text-transform: capitalize;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  transition: all 0.3s ease;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.btn--primary{
+  background-color: rgba(21, 112, 239, 1);
+  padding: 10px 18px;
+  border-radius: 4px;
+  border-radius: 8px;
+}
+
+.btn--primary:hover{
+  background-color: rgba(18, 101, 217, 1);
+}
+
+.btn--secondary{
+  background-color: rgba(255, 255, 255, 1);
+  padding: 10px 18px;
+  border-radius: 4px;
+  border-radius: 8px;
+  color: rgba(52, 64, 84, 1);
+}
+
+.btn--secondary:hover{
+  background-color: #eee;
+}
+
+.banner__content .container__buttons{
+  justify-content: center;
+}
+
+.banner__content .btn{
+  width: 107px;
+  height: 60px;
+}
+
+.banner__content .btn--primary{
+  width: 122px;
+}
+
+/* General buttons End */
 /*********** Custom CSS End ************/
