--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -94,7 +94,11 @@
   }
 
   .banner--large:not(.banner--adapt) {
-    min-height: 72rem;
+    min-height: 938px;
+    height: 938px;
+    max-width: 975px;
+    width: 100%;
+    margin: 0 auto;
   }
 
   .banner__content.banner__content--top-left {
@@ -162,7 +166,6 @@
   height: 100%;
   position: absolute;
   left: 0;
-  top: 0;
   width: 100%;
 }
 
@@ -472,9 +475,49 @@
 }
 
 /*********** Custom CSS ************/
-.banner .media{
-  background: var(--gradient-background);
+.banner div:empty{
+  display: block;
 }
+
+.banner .media{
+  background: transparent;
+}
+
+.hero-banner{
+  position: relative;
+  overflow: hidden;
+}
+
+.banner__background{
+  position: absolute;
+  bottom: 0;
+  right: -225px;
+  z-index: 1;
+}
+
+.banner__background img{
+  object-fit: contain;
+}
+
+.banner .banner__media img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 0%);
+}
+
+.banner .banner__media-half{
+  width: 667px;
+  height: 414.71px;
+  bottom: 0;
+}
+
+/* .banner .media--card-one img {
+  height: 322.71px;
+} */
 
 .banner__heading.hxxl{
   font-weight: 600;
